--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="./style.css" />
+        <link rel="stylesheet" href="./assets/style.css" />
 		<title>Weather Dashboard</title>
 	</head>
 
@@ -35,7 +35,7 @@
                     <div class="weatherCardBody"></div>
                 </div>
             </div>
-                <div class="section3">
+                <div class="section3 col-8">
                     <h4>5 Day Forecast:</h4>
                 </div>
             <div id="forecast" class="row"></div>    
